--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <nav>
         <div>
-            <h1><a href="#">Akshutam.dev</a></h1>
+            <h1><a href="https://akshutam-portfolio.vercel.app/">Akshutam.dev</a></h1>
         </div>
     </nav>
 
