--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
         </div>
     </div>
     </main>
-    
+    <script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
     <script src="weather-app.js"></script>
 </body>
 </html>
