--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </div>
     </main>
     <script>
-  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
 </script>
-<script defer src="/_vercel/insights/script.js"></script>
+<script defer src="/_vercel/speed-insights/script.js"></script>
     <script src="weather-app.js"></script>
 </body>
 </html>
